# baeldung-scrapper

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/baeldung_scrapper/: __init__.py  run.py
src/baeldung_scrapper/config/: logging_setup.py  settings.py
src/baeldung_scrapper/domain/models/: article.py  artifact_manifest.py  artifact_serialization.py  normalized_article.py  storage_layout.py
src/baeldung_scrapper/domain/ports/: cloud_storage.py
src/baeldung_scrapper/extraction/: __init__.py  editorial_extractor.py
src/baeldung_scrapper/fetching/: __init__.py  baeldung_discovery.py  http_client.py
src/baeldung_scrapper/infrastructure/cloud_storage/: __init__.py  factory.py  local_filesystem.py  s3.py
src/baeldung_scrapper/pipeline/: __init__.py  daily_run.py
tests/: test_artifact_manifest.py  test_baeldung_discovery.py  test_daily_run_pipeline.py  test_domain_contracts.py  test_editorial_extractor.py  test_fetch_client.py  test_local_filesystem_adapter.py  test_s3_adapter.py  test_settings.py  test_storage_layout.py  test_storage_provider_factory.py
tests/fixtures/articles/: missing_metadata_article.html  noisy_article.html  preservation_edge_case.html  standard_article.html
tests/fixtures/discovery/: core_java_page_1.html  core_java_page_2.html  java_tutorial_page_1.html  java_tutorial_page_2.html  page_sitemap.xml  post_sitemap.xml  sitemap_index.xml  spring_tutorial_page_1.html
